# whisper-openvino-benchmark

./: .dockerignore  .gitignore  CLAUDE.md  main.py  pyproject.toml
.claude/: settings.local.json
portable/docker/: Dockerfile  README.md  build_docker.sh  create_distribution.sh  docker-compose.yml  image_export.sh  image_import.sh  run_docker.sh  run_interactive.sh
portable/embeddable/: QUICKSTART.md  README.md  cleanup.bat  create_distribution.bat  debug_setup.bat  run_benchmark.bat  setup_portable.bat  test_setup.bat
whisper_benchmark/: __init__.py  audio_stream.py  audio_utils.py  model_utils.py  results_output.py  standard_benchmark.py  streaming_benchmark.py  streaming_metrics.py  system_info.py  true_streaming.py
